--- a/html-css)/task1/index.html
+++ b/html-css)/task1/index.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!-- A: eladi, amma seliqesiz. shift+alt+f etmelisen mutleq. -->
     <hr>
     <h1>menim basligim</h1>
     <hr>
