--- a/html-css)/task3/index.html
+++ b/html-css)/task3/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div>
+      <!-- A: scroll olmamalidir -->
       <h1>I'AM HEADER</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi dolor
