--- a/html-css)/task4/index.html
+++ b/html-css)/task4/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- A: ela -->
     <div>
       <a href="#">HOME</a>
       <a href="#">PHOTOAPP</a>
