--- a/html-css)/task8/index.html
+++ b/html-css)/task8/index.html
@@ -12,7 +12,7 @@
     <h1 class="class">Beijing</h1>
 
     <h3>The Fight</h3>
-
+<!-- A: cox asagidadir, biraz yuxari verek z.o -->
     <h3 class="City">The City</h3>
     <h3>The Culture</h3>
     <h3>The Food</h3>
